When Quicktime is loaded in one tab, Flash content doesn't respond very readily to clicks. Patch by Matthew Gregan. b=420527 r=josh sr=roc